--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
     "name": "custom-github-stats",
-    "version": "1.0.0",
+    "version": "2.0.0",
+    "type": "module",
     "description": "Custom GitHub Stats with decorations",
-    "main": "api/stats.js",
     "scripts": {
-    "dev": "vercel dev"
-},
+        "dev": "vercel dev"
+    },
     "dependencies": {},
     "devDependencies": {
-    "vercel": "^33.0.0"
-}
+        "vercel": "^33.0.0"
+    }
 }
