--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
   ],
   "headers": [
     {
-      "source": "/api/stats",
+      "source": "/api/(.*)",
       "headers": [
         {
           "key": "Access-Control-Allow-Origin",
